Fix undefined variable when using collapsing checkout panes, and remove unnecessary JavaScript.

--- a/uc_cart/uc_cart.css
+++ b/uc_cart/uc_cart.css
@@ -11,10 +11,6 @@
   padding: 5px;
 }
 
-.show-onload {
-  display: none;
-}
-
 .display-none {
   display: none;
 }
